# python-alt-stdlib

./: .gitignore  Push_Git.py  README.md  compile_readme.py  my_style_guide.md  push_git.fish  pyproject.toml  questions.txt  readme_head.md
src/daniel_chin_python_alt_stdlib/: graphic_terminal.py  myfile.py  playback.py  reactNew.py  select_audio_device.py
src/daniel_chin_python_alt_stdlib/Archive/: kernal.py
src/daniel_chin_python_alt_stdlib/Find Vera/: Chars.txt
src/daniel_chin_python_alt_stdlib/To the Earth/dev/: Design.txt  Draft-Ab.txt
src/daniel_chin_python_alt_stdlib/interactive/: __init__.py
