[project]
name = "daniel-chin-python-alt-stdlib"
version = "0.1.0"
description = "A personal alternative standard library collecting Daniel Chin’s weird Python utilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
numpy = ["numpy>=2.3.5"]
chime = ["chime>=0.7.0"]
colorama = ["colorama>=0.4.6"]
crypto = ["crypto>=1.4.1"]
ipykernel = ["ipykernel>=7.1.0"]
ipython = ["ipython>=9.7.0"]
keyboard = ["keyboard>=0.13.5"]
librosa = ["librosa>=0.11.0"]
matplotlib = ["matplotlib>=3.10.7"]
mido = ["mido>=1.3.3"]
mouse = ["mouse>=0.7.1"]
pdfrw = ["pdfrw>=0.4"]
pip = ["pip>=25.3"]
pretty-midi = ["pretty-midi>=0.2.11"]
psutil = ["psutil>=7.1.3"]
pyaudio = ["pyaudio>=0.2.14"]
pyfluidsynth = ["pyfluidsynth>=1.3.4"]
pyperclip = ["pyperclip>=1.11.0"]
python-rtmidi = ["python-rtmidi>=1.5.8"]
qrcode = ["qrcode>=8.2"]
rsa = ["rsa>=4.9.1"]
scipy = ["scipy>=1.16.3"]
simpleaudio = ["simpleaudio>=1.0.4"]
tqdm = ["tqdm>=4.67.1"]
